@@ -911,6 +911,11 @@ If not, for most systems it is sufficient to specify the CUDA toolkit directory 
 Otherwise check the configure help output to specify the location of the CUDA toolkit and CUPTI libraries and include files:
 <pre> ./configure --help=recursive | grep -E "(cuda|cupti)"</pre>
 
+CUDA device and host activities can be filtered by name at runtime using the @scorep filter file (see Section @secref{filtering}).
+Filtering does not remove CUDA activities inserted by @scorep or CUDA data transfers inserted as RDMA events.
+If a kernel is filtered, no kernel launch properties activated in \confvar{SCOREP_CUDA_ENABLE} using <tt>kernel_counter</tt> are inserted for this kernel.
+GPU idle time is not affected by kernel filtering.
+
 
 @section online_access_measurement Online Access Interface
 @seclabel{online_access_measurement}
